# OpenOperator

./: .gitignore  README.md  n  pyproject.toml
examples/: action_memory_demo.py  analyzer_demo.py  basic_demo.py  click_and_type_demo.py  executor_demo.py  focus_typing_demo.py  intelligent_planner_demo.py  interactive_shell_demo.py  mouse_demo.py  multi_word_locator_demo.py  natural_language_planning_demo.py  notepad_demo.py  ocr_demo.py  phrase_click_demo.py  planner_demo.py  screenshot_demo.py  task_runner_demo.py  typing_demo.py  verification_demo.py  vision_click_demo.py  vision_task_executor_demo.py  window_focus_demo.py
src/openoperator/: cli.py  config.py  demos.py  shell.py
tests/integration/: conftest.py  test_notepad_workflow.py
tests/unit/: test_accessibility_control_types.py  test_accessibility_element.py  test_accessibility_tree.py  test_action_memory.py  test_action_memory_manager.py  test_active_window_detection.py  test_agent_loop.py  test_app_launcher_plugin.py  test_autonomous_agent.py  test_autonomous_agent_orchestrator.py  test_autonomous_agent_state_awareness.py  test_autonomous_agent_state_integration.py  test_autonomous_agent_state_retry_decision.py  test_autonomous_agent_state_strategy_integration.py  test_context_commands.py  test_goal_completion_detector.py  test_intelligent_planner.py  test_intent_parser.py  test_keyboard.py  test_llm_intent_parser.py  test_memory_persistence_integration.py  test_memory_shell_integration.py  test_memory_storage.py  test_memory_task_runner_integration.py  test_mouse.py  test_natural_language_planning_demo.py  (+26 more)
(+51 files in other folders)
