[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openoperator"
version = "0.1.0"
description = "Open-source AI framework for computer operating agents"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]